Boats controller
